--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,4 +1,5 @@
 .image-list{
+    margin: 1rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows : 10px; 
@@ -8,4 +9,12 @@
 .image-list img{
     width : 250px;
     grid-row-end: span 2;
+}
+
+body{
+    background-color: #e7f3ff;
+}
+
+#imageSearch{
+    width: 1100px;
 }
